[project]
name = "rstab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.0",
    "albumentations>=2.0.8",
    "astunparse>=1.6.3",
    "beautifulsoup4>=4.13.4",
    "cachetools>=5.5.2",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.2",
    "configargparse>=1.7.1",
    "contourpy>=1.3.2",
    "cupy-cuda12x>=13.4.1",
    "cvxopt>=1.3.2",
    "cycler>=0.12.1",
    "fastrlock>=0.8.3",
    "ffmpeg>=1.4",
    "filelock>=3.18.0",
    "flatbuffers>=25.2.10",
    "fonttools>=4.58.2",
    "gast>=0.6.0",
    "gdown>=5.2.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-pasta>=0.2.0",
    "grpcio>=1.73.0",
    "h5py>=3.14.0",
    "idna>=3.10",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "importlib-metadata>=8.7.0",
    "importlib-resources>=6.5.2",
    "jax>=0.6.1",
    "joblib>=1.5.1",
    "keras>=3.10.0",
    "kiwisolver>=1.4.8",
    "kornia>=0.8.1",
    "lazy-loader>=0.4",
    "libclang>=18.1.1",
    "lpips>=0.1.4",
    "markdown>=3.8",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.3",
    "ml-dtypes>=0.5.1",
    "networkx>=3.5",
    "numpy>=2.1.3",
    "numpy-quaternion>=2024.0.8",
    "oauthlib>=3.2.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "opt-einsum>=3.4.0",
    "packaging>=25.0",
    "pandas>=2.3.0",
    "path>=17.1.0",
    "pillow>=11.2.1",
    "protobuf>=5.29.5",
    "pulp>=3.2.1",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pyparsing>=3.2.3",
    "pypng>=0.20220715.0",
    "pysocks>=1.7.1",
    "python-dateutil>=2.9.0.post0",
    "pytube>=15.0.0",
    "pytz>=2025.2",
    "pywavelets>=1.8.0",
    "pyyaml>=6.0.2",
    "qudida>=0.0.4",
    "requests>=2.32.4",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "six>=1.17.0",
    "soupsieve>=2.7",
    "tensorboard>=2.19.0",
    "tensorboard-data-server>=0.7.2",
    "tensorboardx>=2.6.2.2",
    "tensorflow>=2.19.0",
    "tensorflow-estimator>=2.15.0",
    "tensorflow-io-gcs-filesystem>=0.37.1",
    "termcolor>=3.1.0",
    "threadpoolctl>=3.6.0",
    "tifffile>=2025.6.1",
    "torch>=2.7.1",
    "torch-tb-profiler>=0.4.3",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "tzdata>=2025.2",
    "urllib3>=2.4.0",
    "werkzeug>=3.1.3",
    "wrapt>=1.17.2",
    "zipp>=3.23.0",
]
